--- a/src/main/resources/templates/dept/deptTreeView.html
+++ b/src/main/resources/templates/dept/deptTreeView.html
@@ -64,7 +64,7 @@
         //ajax请求数据方法
         $.ajax({
             type: "POST",
-            url: "/dept/deptTree",//url请求的地址
+            url: "/sys/dept/deptTree",//url请求的地址
             cache: false,  //禁用缓存
             data: {},  //传入组装的参数
             dataType: "json",
