--- a/src/main/resources/templates/modal/deptModal.html
+++ b/src/main/resources/templates/modal/deptModal.html
@@ -51,7 +51,7 @@
     function query() {
         $.ajax(
             {
-                url:"/dept/deptTree",
+                url:"/sys/dept/deptTree",
                 type:"post",
                 data:{
                     deptName:$("#deptName").val()
