--- a/src/main/resources/templates/user/userPasswordReset.html
+++ b/src/main/resources/templates/user/userPasswordReset.html
@@ -37,7 +37,7 @@
                             required: true,
                             remote:{
                                 type:"post",
-                                url:"/user/toCheckPwd",
+                                url:"/sys/user/toCheckPwd",
                                 data:{
                                     password:function () {
                                         return $("#oldPassword").val();
@@ -81,7 +81,7 @@
                 $.ajax({
                     cache:true,
                     type:"post",
-                    url:"/user/changePassword",
+                    url:"/sys/user/changePassword",
                     data:"",
                     async:false,
                     success:function (data) {
