--- a/src/main/resources/templates/role/roleAdd.html
+++ b/src/main/resources/templates/role/roleAdd.html
@@ -17,7 +17,7 @@
     <script th:src="@{/js/sys/role/role.js}"></script>
 </div>
 <div class="container-fluid panel-body">
-    <form class="form-horizontal validation-form" id="formAdd" action="#" th:action="@{/role/roleAdd}" method="post">
+    <form class="form-horizontal validation-form" id="formAdd" action="#" th:action="@{/sys/role/save}" method="post">
         <input type="hidden" name="roleId" th:value="${role.roleId}">
         <div class="panel panel-default" style="margin-bottom: 0px;">
             <h4 class="panel panel-heading h4font">
@@ -27,8 +27,9 @@
                 </small>
             </h4>
             <div class="panel-body">
+
                 <div class="form-group">
-                    <label class="col-sm-1 control-label">
+                    <label class="col-sm-2 control-label">
                         <span style="color:red;font-weight:bold">角色英文名</span>
                     </label>
                     <div class="col-sm-4">
@@ -38,7 +39,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-1 control-label">
+                    <label class="col-sm-2 control-label">
                         <span style="color:red;font-weight:bold">角色中文名</span>
                     </label>
                     <div class="col-sm-4">
@@ -48,7 +49,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-1 control-label">角色描述</label>
+                    <label class="col-sm-2 control-label">角色描述</label>
                     <div class="col-sm-4">
                         <input type="text" class="form-control" name="description" placeholder="描述" th:value="${role.description}">
                     </div>
@@ -56,9 +57,9 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-1 control-label"><span style="color: red;font-weight: bold">＊</span>状态</label>
+                    <label class="col-sm-2 control-label"><span style="color: red;font-weight: bold">＊</span>状态</label>
 
-                    <div class="col-sm-11">
+                    <div class="col-sm-4">
                         <label class="radio-inline">
                             <input type="radio" value="true" checked  name="available"  th:checked="${role.available}">正常
                         </label>
@@ -69,7 +70,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-1 control-label">创建时间</label>
+                    <label class="col-sm-2 control-label">创建时间</label>
                     <div class="col-sm-4">
                         <input type="text" readonly class="form-control" name="createTime" placeholder=""
                                th:value="${#temporals.format(role.createDate, 'yyyy-MM-dd HH:mm:ss')}">
@@ -80,13 +81,8 @@
             </div>
 
             <div class="form-group">
-                <div class="col-sm-offset-5 col-sm-1">
                     <button type="submit" class="btn btn-primary">保 存</button>
-                </div>
-
-                <div class="col-sm-1">
-                    <a name="backToRoleList" href="javascript:void(0)" th:href="@{/role/index}" class="btn btn-primary">返 回</a>
-                </div>
+                    <button type="button" href="javascript:void(0)" th:href="@{/sys/role/index}" class="btn btn-secondary">返 回</button>
             </div>
         </div>
 
