--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" th:href="@{/webjars/datatables/css/dataTables.bootstrap.min.css}"/>
 </head>
 <body>
-<!--引用通用JS-->
-<div th:replace="common/commonFoot::foot(~{::script})">
-    <script th:src="@{/webjars/datatables/js/jquery.dataTables.min.js}" ></script>
-</div>
-
 <div class="container panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title">
@@ -37,156 +32,161 @@
         </table>
     </div>
 </div>
-<script type="text/javascript">
-
-    // 第三步初始化Datatables
-    $(document).ready(function () {
-        dataTable();
-    });
-
-    function dataTable() {
+<!--引用通用JS-->
+<div th:replace="common/commonFoot::foot(~{::script})">
+    <script th:src="@{/webjars/datatables/js/jquery.dataTables.min.js}" ></script>
+    <script type="text/javascript">
 
         // 第三步初始化Datatables
-        $('#table_user').DataTable({
-            autoWidth: false,  //禁用自动调整列宽
-            stripeClasses: ["odd", "even"],  //为奇偶行加上样式，兼容不支持CSS伪类的场合
-            processing: true,  //隐藏加载提示,自行处理
-            serverSide: true,  //启用服务器端分页
-            searching: false,  //禁用原生搜索
-            orderMulti: false,  //启用多列排序
-            retrieve: true,
-            order: [],  //取消默认排序查询,否则复选框一列会出现小箭头
-            renderer: "bootstrap",  //渲染样式：Bootstrap和jquery-ui
-            paging: true,
-            pagingType: "full_numbers",  //分页样式：simple,simple_numbers,full,full_numbers
-            language: {
-                // "lengthMenu": "每页 _MENU_ 条记录",
-                "lengthMenu":
-                    '<div class="form-inline row">' +
-                    '  <label for="name" class="control-label">每页</label>'+
-                    '<select class="form-control">' +
-                    '<option value="5">5</option>' +
-                    '<option value="10">10</option>' +
-                    '<option value="20">20</option>' +
-                    '<option value="30">30</option>' +
-                    '<option value="40">40</option>' +
-                    '<option value="50">50</option>' +
-                    '</select>' +
-                    '  <label for="name" class="control-label">条记录</label>'+
-                    '</div>',
+        $(document).ready(function () {
+            dataTable();
+        });
 
-                "paginate": {
-                    "first": "首页",
-                    "previous": "上一页",
-                    "next": "下一页",
-                    "last": "尾页"
+        function dataTable() {
+
+            // 第三步初始化Datatables
+            $('#table_user').DataTable({
+                autoWidth: false,  //禁用自动调整列宽
+                stripeClasses: ["odd", "even"],  //为奇偶行加上样式，兼容不支持CSS伪类的场合
+                processing: true,  //隐藏加载提示,自行处理
+                serverSide: true,  //启用服务器端分页
+                searching: false,  //禁用原生搜索
+                orderMulti: false,  //启用多列排序
+                retrieve: true,
+                order: [],  //取消默认排序查询,否则复选框一列会出现小箭头
+                renderer: "bootstrap",  //渲染样式：Bootstrap和jquery-ui
+                paging: true,
+                pagingType: "full_numbers",  //分页样式：simple,simple_numbers,full,full_numbers
+                language: {
+                    // "lengthMenu": "每页 _MENU_ 条记录",
+                    "lengthMenu":
+                        '<div class="form-inline row">' +
+                        '  <label for="name" class="control-label">每页</label>'+
+                        '<select class="form-control">' +
+                        '<option value="5">5</option>' +
+                        '<option value="10">10</option>' +
+                        '<option value="20">20</option>' +
+                        '<option value="30">30</option>' +
+                        '<option value="40">40</option>' +
+                        '<option value="50">50</option>' +
+                        '</select>' +
+                        '  <label for="name" class="control-label">条记录</label>'+
+                        '</div>',
+
+                    "paginate": {
+                        "first": "首页",
+                        "previous": "上一页",
+                        "next": "下一页",
+                        "last": "尾页"
+                    },
+                    "zeroRecords": " ",
+                    "info": "当前 _START_ 条到 _END_ 条 共 _TOTAL_ 条",
+                    "infoEmpty": "0条记录",
+                    "infoFiltered": "(从 _MAX_ 条记录过滤)"
                 },
-                "zeroRecords": " ",
-                "info": "当前 _START_ 条到 _END_ 条 共 _TOTAL_ 条",
-                "infoEmpty": "0条记录",
-                "infoFiltered": "(从 _MAX_ 条记录过滤)"
-            },
 
-            sAjaxSource: "/user/page",//url请求的地址
-            fnServerData: retrieveData,
-            columnDefs: [{
-                "targets": 'nosort',  //列的样式名
-                "orderable": false    //包含上样式名‘nosort’的禁止排序
-            }],
-            //列表表头字段
-            columns: [
-                {data: 'userId'},
-                {data: 'userName'},
-                {data: 'loginName'},
-                {data: 'email'},
-                {data: 'phone'},
-                {data: 'remarks'},
-                //新建列的 定义
-                {
-                    className: "td-operation text-center",
-                    data: null,
-                    defaultContent: "",
-                    orderable: false,
-                    width: "160px"
+                sAjaxSource: "/sys/user/page",//url请求的地址
+                fnServerData: retrieveData,
+                columnDefs: [{
+                    "targets": 'nosort',  //列的样式名
+                    "orderable": false    //包含上样式名‘nosort’的禁止排序
+                }],
+                //列表表头字段
+                columns: [
+                    {data: 'userId'},
+                    {data: 'userName'},
+                    {data: 'loginName'},
+                    {data: 'email'},
+                    {data: 'phone'},
+                    {data: 'remarks'},
+                    //新建列的 定义
+                    {
+                        className: "td-operation text-center",
+                        data: null,
+                        defaultContent: "",
+                        orderable: false,
+                        width: "160px"
+                    }
+                ],
+                //新建列的 数据内容
+                "createdRow": function (row, data, index) {
+                    var obj = JSON.stringify(data);
+                    //行渲染回调,在这里可以对该行dom元素进行任何操作
+                    var view = "<a href='#' class='btn btn-info  btn-xs' onclick='view(" + obj + ")'><i class='fa fa-search-plus'></i>查看</a>";
+                    var edit = "<a href='#' class='btn btn-success  btn-xs' onclick='edit(" + obj + ")'><i class='fa fa-edit'></i>编辑</a>";
+                    var del = "<a href='#' class='btn btn-danger  btn-xs' onclick='del(" + obj + ")'><i class='fa fa-trash'></i>删除</a>";
+                    var renderColumn=view+edit+del;
+                    //
+                    $('td', row).eq(6).append(renderColumn);
                 }
-            ],
-            //新建列的 数据内容
-            "createdRow": function (row, data, index) {
-                var obj = JSON.stringify(data);
-                //行渲染回调,在这里可以对该行dom元素进行任何操作
-                var view = "<a href='#' class='btn btn-info  btn-xs' onclick='view(" + obj + ")'><i class='fa fa-search-plus'></i>查看</a>";
-                var edit = "<a href='#' class='btn btn-success  btn-xs' onclick='edit(" + obj + ")'><i class='fa fa-edit'></i>编辑</a>";
-                var del = "<a href='#' class='btn btn-danger  btn-xs' onclick='del(" + obj + ")'><i class='fa fa-trash'></i>删除</a>";
-                var renderColumn=view+edit+del;
-                //
-                $('td', row).eq(6).append(renderColumn);
-            }
-        }).draw();
-    }
+            }).draw();
+        }
 
-    //渲染数据
-    function retrieveData(url, data, fnCallback) {
-        //封装请求参数
-        var param = {};
-        param.pageSize = data.length;//页面显示记录条数，在页面显示每页显示多少项的时候
-        param.start = data.start;//开始的记录序号
-        param.pageNum = (data.start / data.length);//当前页码
-        //ajax请求数据方法
-        $.ajax({
-            type: "POST",
-            url: url,//url请求的地址
-            cache: false,  //禁用缓存
-            data: param,  //传入组装的参数
-            dataType: "json",
-            success: function (result) {
-                console.log("----"+JSON.stringify(result));
-                var data=JSON.stringify(result);
-                //调用DataTables提供的callback方法，代表数据已封装完成并传回DataTables进行渲染
-                //此时的数据需确保正确无误，异常判断应在执行此回调前自行处理完毕
-                fnCallback(result);
-            },
-            error: function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("status:" + XMLHttpRequest.status + ",readyState:" + XMLHttpRequest.readyState + ",textStatus:" + textStatus);
-            }
-        });
-    }
-    //查看
-    function view(data){
-        var url="/user/view?userId="+data.userId;
-        openDialog("查看用户",url,'800px', '600px');
-    }
-    //编辑
-    function edit(data){
-        var url="/user/edit?userId="+data.userId;
-        openDialog("编辑用户",url,'800px', '600px');
-    }
-    //删除
-    function del(data){
-        //ajax请求数据方法
-        $.ajax({
-            type: "POST",
-            url: "/user/delete",//url请求的地址
-            cache: false,  //禁用缓存
-            data: {
-                userId:data.userId
-            },  //传入组装的参数
-            dataType: "json",
-            success: function (result) {
-                if(result.success){
-                    toastr.success('删除成功！');
-                    window.location.reload();
+        //渲染数据
+        function retrieveData(url, data, fnCallback) {
+            //封装请求参数
+            var param = {};
+            param.pageSize = data.length;//页面显示记录条数，在页面显示每页显示多少项的时候
+            param.start = data.start;//开始的记录序号
+            param.pageNum = (data.start / data.length);//当前页码
+            //ajax请求数据方法
+            $.ajax({
+                type: "POST",
+                url: url,//url请求的地址
+                cache: false,  //禁用缓存
+                data: param,  //传入组装的参数
+                dataType: "json",
+                success: function (result) {
+                    console.log("----"+JSON.stringify(result));
+                    var data=JSON.stringify(result);
+                    //调用DataTables提供的callback方法，代表数据已封装完成并传回DataTables进行渲染
+                    //此时的数据需确保正确无误，异常判断应在执行此回调前自行处理完毕
+                    fnCallback(result);
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown) {
+                    alert("status:" + XMLHttpRequest.status + ",readyState:" + XMLHttpRequest.readyState + ",textStatus:" + textStatus);
                 }
-            },
-            error: function (XMLHttpRequest, textStatus, errorThrown) {
-                toastr.warning('删除失败！');
-                alert("status:" + XMLHttpRequest.status + ",readyState:" + XMLHttpRequest.readyState + ",textStatus:" + textStatus);
-            }
-        });
-    }
-    //新增
-    function toAdd(){
-        openDialog("新增用户","/user/add",'800px', '600px');
-    }
-</script>
+            });
+        }
+        //查看
+        function view(data){
+            var url="/sys/user/view?userId="+data.userId;
+            openDialog("查看用户",url,'800px', '600px');
+        }
+        //编辑
+        function edit(data){
+            var url="/sys/user/edit?userId="+data.userId;
+            openDialog("编辑用户",url,'800px', '600px');
+        }
+        //删除
+        function del(data){
+            //ajax请求数据方法
+            $.ajax({
+                type: "POST",
+                url: "/sys/user/delete",//url请求的地址
+                cache: false,  //禁用缓存
+                data: {
+                    userId:data.userId
+                },  //传入组装的参数
+                dataType: "json",
+                success: function (result) {
+                    if(result.success){
+                        toastr.success('删除成功！');
+                        window.location.reload();
+                    }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown) {
+                    toastr.warning('删除失败！');
+                    alert("status:" + XMLHttpRequest.status + ",readyState:" + XMLHttpRequest.readyState + ",textStatus:" + textStatus);
+                }
+            });
+        }
+        //新增
+        function toAdd(){
+            openDialog("新增用户","/sys/user/add",'800px', '600px');
+        }
+    </script>
+</div>
+
 </body>
 </html>
