--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <title>登录管理</title>
     <link rel="stylesheet" th:href="@{/css/login.css}"></link>
 </head>
-<body>
+<body class="gray-bg">
 
 <div class="container">
     <div class="row center">
