初始化sql语句整理提交

--- a/src/main/resources/templates/user/userAdd.html
+++ b/src/main/resources/templates/user/userAdd.html
@@ -106,8 +106,7 @@
                 </div>
             </div>
 
-            <div class
-                         ="form-group">
+            <div class="form-group">
                 <button type="submit" id="btn_save" name="btn_save" class="btn btn-primary" th:if="${readOnly} ne true" >保存</button>
                 <button type="button" id="btn_back" name="btn_back" class="btn btn-secondary" onclick="windowClose()">返回</button>
             </div>
