--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -60,7 +60,7 @@
 </div>
 <!--权限控制-->
 <script type="application/javascript">
-    let s_edit_h=false;
+    let s_edit_h=true;
     let s_remove_h=false;
 </script>
 <shiro:hasPermission name="sys:user:edit">
