--- a/src/main/resources/templates/role/roleList.html
+++ b/src/main/resources/templates/role/roleList.html
@@ -23,7 +23,7 @@
     </div>
     <!--工具栏-->
     <div id="toolbar" class="btn-group">
-        <button id="btn_add" shiro:hasPermission="sys:role:add"
+        <button id="btn_add"
                 type="button" class="btn btn-primary btn-sm">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
         </button>
@@ -61,9 +61,9 @@
 </div>
 <!--权限控制-->
 <script type="application/javascript">
-    let s_edit_h=false;
-    let s_remove_h=false;
-    let s_grant_h=false;
+    let s_edit_h=true;
+    let s_remove_h=true;
+    let s_grant_h=true;
 </script>
 <shiro:hasPermission name="sys:role:add">
     <script type="application/javascript">
